# bencode.hpp

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  build.bfg  library.h
include/: bencode.hpp
src/: bencode.hpp
test/: test_decode.cpp  test_encode.cpp
